# Social-Media-Feed-Recommendation-Algorithm

./: AllInterests.cpp  AllInterests.h  CMakeLists.txt  ConnectionsManager.cpp  ConnectionsManager.h  DoublyLinkedList.cpp  DoublyLinkedList.h  DoublyLinkedList.tpp  FeedGenerator.cpp  FeedGenerator.h  FileHandler.cpp  FileHandler.h  Post.cpp  Post.h  PostLinkList.cpp  PostLinkList.h  PostManagement.h  Postmanagement.cpp  PriorityQueue.cpp  PriorityQueue.h  Project Report.docx  Project slides.pptx  Queue.cpp  Queue.h  Readme.md  Stack.cpp  Stack.h  User.cpp  User.h  UserAnalytics.cpp  UserAnalytics.h  UserManager.cpp  UserManager.h  connections.txt  main.cpp  posts.txt  users.txt
